# gst-whisper

./: Cargo.toml  README.md
src/: filter.rs  lib.rs
src/filter/: imp.rs
src/filter/imp/: vad.rs
